[gd_scene load_steps=2 format=3 uid="uid://dj3m7xwq2h8pn"]

[ext_resource type="Script" path="res://scripts/intro/intro_manager.gd" id="1_intro"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_intro")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 64
text = "CARGO ESCAPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 185.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Intercept. Board. Loot. Escape."
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="UI/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "NEW GAME"

[node name="QuitButton" type="Button" parent="UI/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="DevMenu" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -180.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="DevLabel" type="Label" parent="UI/DevMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 0.7)
theme_override_font_sizes/font_size = 12
text = "DEV TOOLS"
horizontal_alignment = 1

[node name="HideoutButton" type="Button" parent="UI/DevMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Skip to Hideout"

[node name="EscapeButton" type="Button" parent="UI/DevMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Skip to Escape"

[node name="BoardingButton" type="Button" parent="UI/DevMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Skip to Boarding"

[node name="SkipHint" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.5)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "Press SPACE to skip | Hold SPACE for 2x speed | ESC to skip to gameplay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Footer" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_font_sizes/font_size = 14
text = "Press ENTER to Start"
horizontal_alignment = 1

[node name="FlashOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 1)
